--- a/build.gradle
+++ b/build.gradle
@@ -5,6 +5,9 @@ buildscript {
     repositories {
         google()
         jcenter()
+        maven {
+            url 'https://maven.fabric.io/public'
+        }
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.0.1'
@@ -14,6 +17,8 @@ buildscript {
         // in the individual module build.gradle files
 
         classpath 'com.google.gms:google-services:4.0.1'
+        classpath 'io.fabric.tools:gradle:1.25.4'
+
     }
 }
 
@@ -21,7 +26,13 @@ allprojects {
     repositories {
         google()
         jcenter()
-        maven{url 'https://jitpack.io'}
+        maven{
+            url 'https://jitpack.io'
+
+        }
+        maven{
+            url 'https://maven.google.com/'
+        }
     }
 }
 
