--- a/app/build.gradle
+++ b/app/build.gradle
@@ -51,6 +51,8 @@ dependencies {
     implementation 'id.zelory:compressor:2.1.0'
     // material favorite button
     implementation 'com.github.ivbaranov:materialfavoritebutton:0.1.5'
+    // implement slider preference
+    implementation 'com.github.jayschwa:AndroidSliderPreference:v1.0.1'
 
     implementation 'com.crashlytics.sdk.android:crashlytics:2.9.5'
     implementation 'com.google.firebase:firebase-core:16.0.3'
