--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,6 +53,8 @@ dependencies {
     implementation 'com.github.ivbaranov:materialfavoritebutton:0.1.5'
     // implement slider preference
     implementation 'com.github.jayschwa:AndroidSliderPreference:v1.0.1'
+    // auto size edit text
+    implementation 'com.github.ViksaaSkool:AutoFitEditText:53238e2d29'
 
     implementation 'com.crashlytics.sdk.android:crashlytics:2.9.5'
     implementation 'com.google.firebase:firebase-core:16.0.3'
