--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -54,8 +54,7 @@
         <activity
             android:name=".Activities.MapsActivity"
             android:label="@string/title_activity_maps" />
-        <activity android:name=".Activities.YourAdsActivity"></activity>
-
+        <activity android:name=".Activities.YourAdsActivity" />
         <activity
             android:name=".Activities.SettingsActivity"
             android:parentActivityName=".Activities.NavigationActivity">
@@ -63,6 +62,7 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".Activities.NavigationActivity" />
         </activity>
+        <activity android:name=".Activities.ProfileView"></activity>
     </application>
 
 </manifest>
