--- a/app/build.gradle
+++ b/app/build.gradle
@@ -55,6 +55,8 @@ dependencies {
     implementation 'com.github.jayschwa:AndroidSliderPreference:v1.0.1'
     // auto size edit text
     implementation 'com.github.ViksaaSkool:AutoFitEditText:53238e2d29'
+    // zoom image view
+    implementation 'com.jsibbold:zoomage:1.2.0-SNAPSHOT'
 
     implementation 'com.crashlytics.sdk.android:crashlytics:2.9.5'
     implementation 'com.google.firebase:firebase-core:16.0.3'
