added current and closed ads in posted ads activity with view pager

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -62,7 +62,8 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".Activities.NavigationActivity" />
         </activity>
-        <activity android:name=".Activities.ProfileView"></activity>
+        <activity android:name=".Activities.ProfileView" />
+        <activity android:name=".Activities.PostedAdsActivity"></activity>
     </application>
 
 </manifest>
