--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,11 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+
+        <meta-data
+            android:name="com.google.android.geo.API_KEY"
+            android:value="@string/google_maps_key" />
+
         <activity android:name=".Activities.SignInActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -37,8 +42,10 @@
             android:label="@string/title_activity_navigation"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name="com.theartofdev.edmodo.cropper.CropImageActivity" />
-        <activity android:name=".Activities.AdPreviewActivity" />
-        <activity android:name=".Activities.ChatActivity" />
+        <activity android:name=".Activities.AdPreviewActivity"
+            android:parentActivityName=".Activities.NavigationActivity"/>
+        <activity android:name=".Activities.ChatActivity"
+            android:parentActivityName=".Activities.NavigationActivity"/>
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
              (See the file "res/values/google_maps_api.xml").
@@ -47,14 +54,13 @@
              sign the APK for publishing.
              You can define the keys for the debug and release targets in src/debug/ and src/release/. 
         -->
-        <meta-data
-            android:name="com.google.android.geo.API_KEY"
-            android:value="@string/google_maps_key" />
+
 
         <activity
             android:name=".Activities.MapsActivity"
             android:label="@string/title_activity_maps" />
-        <activity android:name=".Activities.YourAdsActivity" />
+        <activity android:name=".Activities.YourAdsActivity"
+            android:parentActivityName=".Activities.NavigationActivity" />
         <activity
             android:name=".Activities.SettingsActivity"
             android:parentActivityName=".Activities.NavigationActivity">
@@ -62,8 +68,10 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".Activities.NavigationActivity" />
         </activity>
-        <activity android:name=".Activities.ProfileView" />
-        <activity android:name=".Activities.PostedAdsActivity"></activity>
+        <activity android:name=".Activities.ProfileView"
+            android:parentActivityName=".Activities.NavigationActivity" />
+        <activity android:name=".Activities.PostedAdsActivity"
+            android:parentActivityName=".Activities.NavigationActivity"></activity>
     </application>
 
 </manifest>
