added permission for enabling location service

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -68,5 +68,7 @@ dependencies {
     // maps
     implementation 'com.google.android.gms:play-services-maps:15.0.1'
     implementation "com.google.android.gms:play-services-places:15.0.1"
+
+    compile 'com.google.android.gms:play-services-location:15.0.1'
 }
 apply plugin: 'com.google.gms.google-services'
