--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,12 +3,6 @@
     package="com.sapicons.deepak.k2psap">
 
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
-
-    <!--
-         The ACCESS_COARSE/FINE_LOCATION permissions are not required to use
-         Google Maps Android API v2, but you must specify either coarse or fine
-         location permissions for the 'MyLocation' functionality. 
-    -->
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
 
     <application
@@ -18,7 +12,6 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_maps_key" />
@@ -42,10 +35,12 @@
             android:label="@string/title_activity_navigation"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name="com.theartofdev.edmodo.cropper.CropImageActivity" />
-        <activity android:name=".Activities.AdPreviewActivity"
-            android:parentActivityName=".Activities.NavigationActivity"/>
-        <activity android:name=".Activities.ChatActivity"
-            android:parentActivityName=".Activities.NavigationActivity"/>
+        <activity
+            android:name=".Activities.AdPreviewActivity"
+            android:parentActivityName=".Activities.NavigationActivity" />
+        <activity
+            android:name=".Activities.ChatActivity"
+            android:parentActivityName=".Activities.NavigationActivity" />
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
              (See the file "res/values/google_maps_api.xml").
@@ -55,11 +50,11 @@
              You can define the keys for the debug and release targets in src/debug/ and src/release/. 
         -->
 
-
         <activity
             android:name=".Activities.MapsActivity"
             android:label="@string/title_activity_maps" />
-        <activity android:name=".Activities.YourAdsActivity"
+        <activity
+            android:name=".Activities.YourAdsActivity"
             android:parentActivityName=".Activities.NavigationActivity" />
         <activity
             android:name=".Activities.SettingsActivity"
@@ -68,10 +63,12 @@
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".Activities.NavigationActivity" />
         </activity>
-        <activity android:name=".Activities.ProfileView"
+        <activity
+            android:name=".Activities.ProfileView"
+            android:parentActivityName=".Activities.NavigationActivity"/>
+        <activity
+            android:name=".Activities.PostedAdsActivity"
             android:parentActivityName=".Activities.NavigationActivity" />
-        <activity android:name=".Activities.PostedAdsActivity"
-            android:parentActivityName=".Activities.NavigationActivity"></activity>
     </application>
 
 </manifest>
